--- a/kriminalita.ipynb
+++ b/kriminalita.ipynb
@@ -3,6 +3,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bcc8ff32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# D_type creation\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load your CSVs\n",
+    "types_df = pd.read_csv(\"C://Users//jirip//Documents//Developer//python//kriminalita//dimensions//types.csv\", sep=\",\", encoding=\"utf-8\")\n",
+    "\n",
+    "# Prepare lookup for type names/labels\n",
+    "type_lookup = types_df.set_index('id')[['name', 'label']].to_dict('index')\n",
+    "\n",
+    "# Create expanded hierarchy table\n",
+    "def expand_hierarchy(row):\n",
+    "    ids = [row['parent_id1'], row['parent_id2'], row['parent_id3'], row['id']]\n",
+    "    labels = [type_lookup.get(i, {'label': None})['label'] if i > 0 else None for i in ids]\n",
+    "    names = [type_lookup.get(i, {'name': None})['name'] if i > 0 else None for i in ids]\n",
+    "    \n",
+    "    result = {}\n",
+    "    for level, (tid, label, name) in enumerate(zip(ids, labels, names), 1):\n",
+    "        result[f'level_{level}_id'] = tid if tid > 0 else None\n",
+    "        result[f'level_{level}_label'] = label\n",
+    "        result[f'level_{level}_name'] = name\n",
+    "    return pd.Series(result)\n",
+    "\n",
+    "dimension_df = types_df.apply(expand_hierarchy, axis=1)\n",
+    "dimension_df = pd.concat([types_df[['id']], dimension_df, types_df[['name', 'label']]], axis=1)\n",
+    "\n",
+    "# Fill missing level_3 data from level_4\n",
+    "mask = dimension_df['level_3_id'].isna()\n",
+    "dimension_df.loc[mask, ['level_3_id', 'level_3_label', 'level_3_name']] = dimension_df.loc[mask, ['level_4_id', 'level_4_label', 'level_4_name']].values\n",
+    "\n",
+    "# Fill missing level_2 data from level_3\n",
+    "mask = dimension_df['level_2_id'].isna()\n",
+    "dimension_df.loc[mask, ['level_2_id', 'level_2_label', 'level_2_name']] = dimension_df.loc[mask, ['level_3_id', 'level_3_label', 'level_3_name']].values\n",
+    "\n",
+    "# Fill missing level_1 data from level_2\n",
+    "mask = dimension_df['level_1_id'].isna()\n",
+    "dimension_df.loc[mask, ['level_1_id', 'level_1_label', 'level_1_name']] = dimension_df.loc[mask, ['level_2_id', 'level_2_label', 'level_2_name']].values\n",
+    "dimension_df.to_csv('dimensions//D_type.csv', index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5ba1673b",
    "metadata": {},
    "outputs": [],
@@ -226,98 +273,6 @@
     "filtered_fact_df = fact_df.groupby('id', group_keys=False).apply(filter_most_granular).reset_index(drop=True)\n",
     "\n",
     "print(filtered_fact_df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "bcc8ff32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Load your CSVs\n",
-    "types_df = pd.read_csv(\"C://Users//jirip//Documents//Developer//python//kriminalita//types.csv\", sep=\",\", encoding=\"utf-8\")\n",
-    "\n",
-    "# Prepare lookup for type names/labels\n",
-    "type_lookup = types_df.set_index('id')[['name', 'label']].to_dict('index')\n",
-    "\n",
-    "# Create expanded hierarchy table\n",
-    "def expand_hierarchy(row):\n",
-    "    ids = [row['parent_id1'], row['parent_id2'], row['parent_id3'], row['id']]\n",
-    "    labels = [type_lookup.get(i, {'label': None})['label'] if i > 0 else None for i in ids]\n",
-    "    names = [type_lookup.get(i, {'name': None})['name'] if i > 0 else None for i in ids]\n",
-    "    \n",
-    "    result = {}\n",
-    "    for level, (tid, label, name) in enumerate(zip(ids, labels, names), 1):\n",
-    "        result[f'level_{level}_id'] = tid if tid > 0 else None\n",
-    "        result[f'level_{level}_label'] = label\n",
-    "        result[f'level_{level}_name'] = name\n",
-    "    return pd.Series(result)\n",
-    "\n",
-    "dimension_df = types_df.apply(expand_hierarchy, axis=1)\n",
-    "dimension_df = pd.concat([types_df[['id']], dimension_df, types_df[['name', 'label']]], axis=1)\n",
-    "\n",
-    "# Save or inspect\n",
-    "dimension_df.to_csv('dim_type.csv', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "053eb131",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fill missing level_3 data from level_4\n",
-    "mask = dimension_df['level_3_id'].isna()\n",
-    "dimension_df.loc[mask, ['level_3_id', 'level_3_label', 'level_3_name']] = dimension_df.loc[mask, ['level_4_id', 'level_4_label', 'level_4_name']].values\n",
-    "\n",
-    "# Fill missing level_2 data from level_3\n",
-    "mask = dimension_df['level_2_id'].isna()\n",
-    "dimension_df.loc[mask, ['level_2_id', 'level_2_label', 'level_2_name']] = dimension_df.loc[mask, ['level_3_id', 'level_3_label', 'level_3_name']].values\n",
-    "\n",
-    "# Fill missing level_1 data from level_2\n",
-    "mask = dimension_df['level_1_id'].isna()\n",
-    "dimension_df.loc[mask, ['level_1_id', 'level_1_label', 'level_1_name']] = dimension_df.loc[mask, ['level_2_id', 'level_2_label', 'level_2_name']].values\n",
-    "dimension_df.to_csv('dim_type.csv', index=False)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "83e331f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 310501 entries, 0 to 310500\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column     Non-Null Count   Dtype  \n",
-      "---  ------     --------------   -----  \n",
-      " 0   id         310501 non-null  int64  \n",
-      " 1   x          310501 non-null  float64\n",
-      " 2   y          310501 non-null  float64\n",
-      " 3   mp         310501 non-null  bool   \n",
-      " 4   date       310501 non-null  object \n",
-      " 5   state      310501 non-null  int64  \n",
-      " 6   relevance  310501 non-null  int64  \n",
-      " 7   types      310501 non-null  int64  \n",
-      "dtypes: bool(1), float64(2), int64(4), object(1)\n",
-      "memory usage: 16.9+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "fact_df = pd.read_csv(\"C://Users//jirip//Documents//Developer//python//kriminalita//202504.csv\", sep=\",\", encoding=\"utf-8\")\n",
-    "fact_df.info()"
    ]
   },
   {
