--- a/map.ipynb
+++ b/map.ipynb
@@ -2,28 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "5afe985d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# POLIGONS for KRAJE, OKRESY, OBCE\n",
+    "# -*- coding: utf-8 -*-\n",
     "import json\n",
     "from shapely.geometry import shape, Point\n",
     "\n",
     "\n",
-    "# Load your kraje polygons from JSON\n",
-    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//kraje.json') as f:\n",
-    "    regions_data = json.load(f)\n",
-    "# Prepare polygons\n",
-    "regions = []\n",
-    "for feature in regions_data['features']:  # assuming GeoJSON-like structure\n",
-    "    region_id = feature['id']\n",
-    "    polygon = shape(feature['geometry'])  # shapely geometry from geojson\n",
-    "    regions.append((region_id, polygon))\n",
+    "# # Load your kraje polygons from JSON\n",
+    "# with open('C://Users//jirip//Documents//Developer//python//kriminalita//map_files//kraje.json') as f:\n",
+    "#     regions_data = json.load(f)\n",
+    "# # Prepare polygons\n",
+    "# regions = []\n",
+    "# for feature in regions_data['features']:  # assuming GeoJSON-like structure\n",
+    "#     region_id = feature['id']\n",
+    "#     polygon = shape(feature['geometry'])  # shapely geometry from geojson\n",
+    "#     regions.append((region_id, polygon))\n",
     "\n",
     "\n",
     "# Load your okresy polygons from JSON\n",
-    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//okresy.json') as f:\n",
+    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//map_files//okresy.json') as f:\n",
     "    districts_data = json.load(f)\n",
     "# Prepare polygons\n",
     "districts = []\n",
@@ -34,7 +36,7 @@
     "\n",
     "\n",
     "#  Load your obce polygons from JSON\n",
-    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//obce.json') as f:\n",
+    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//map_files//obce.json') as f:\n",
     "    cities_data = json.load(f)\n",
     "# Prepare polygons\n",
     "cities = []\n",
@@ -46,14 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1c7976fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point is inside region: CZ0322000000\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# Load your kraje polygons from JSON\n",
-    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//obce.json') as f:\n",
+    "# POLIGONS for OBCE\n",
+    "# -*- coding: utf-8 -*-\n",
+    "import json\n",
+    "from shapely.geometry import shape, Point\n",
+    "# Load obce polygons from JSON\n",
+    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//map_files//okresy.json') as f:\n",
     "    regions_data = json.load(f)\n",
     "\n",
     "# Prepare polygons\n",
@@ -64,7 +77,7 @@
     "    regions.append((region_id, polygon))\n",
     "\n",
     "# Example point you want to assign\n",
-    "point = Point(14.414338,50.087987)  # (longitude, latitude)\n",
+    "point = Point(13.295537,49.387969)  # (longitude, latitude)\n",
     "\n",
     "# Find which region contains the point\n",
     "assigned_region = None\n",
@@ -86,6 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# FLATTENING GEOJSON\n",
+    "# -*- coding: utf-8 -*-\n",
     "import json\n",
     "import pandas as pd\n",
     "\n",
@@ -112,35 +127,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a240a823",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"C://Users//jirip//Documents//Developer//python//kriminalita//fact_clean.csv\", sep=\",\", encoding=\"utf-8\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f894b771",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# POLIGONS for OBCE & ASSIGNING POINTS TO POLYGONS\n",
+    "# -*- coding: utf-8 -*-\n",
+    "import json\n",
+    "import pandas as pd\n",
     "import geopandas as gpd\n",
+    "from shapely.geometry import shape, Point\n",
     "\n",
-    "# Prepare regions GeoDataFrame\n",
-    "gdf_regions = gpd.GeoDataFrame({'region_id': [r[0] for r in regions]}, geometry=[r[1] for r in regions])\n",
+    "# Load obce polygons from JSON\n",
+    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//map_files//okresy.json') as f:\n",
+    "    regions_data = json.load(f)\n",
     "\n",
-    "# Prepare points GeoDataFrame\n",
-    "gdf_points = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df.Longitude, df.Latitude))\n",
+    "# Prepare polygons\n",
+    "regions = []\n",
+    "for feature in regions_data['features']:  # assuming GeoJSON-like structure\n",
+    "    region_id = feature['id']\n",
+    "    polygon = shape(feature['geometry'])  # shapely geometry from geojson\n",
+    "    regions.append((region_id, polygon))\n",
     "\n",
-    "# Spatial join\n",
-    "gdf_joined = gpd.sjoin(gdf_points, gdf_regions, how='left', predicate='within')\n",
     "\n",
-    "# If needed, bring the result back to pandas\n",
-    "df_result = pd.DataFrame(gdf_joined.drop(columns=['geometry', 'index_right']))\n",
     "\n",
-    "df_result.to_csv('F_Crime.csv', index=False)\n"
+    "#  Load your obce polygons from JSON\n",
+    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//map_files//obce.json') as f:\n",
+    "    cities_data = json.load(f)\n",
+    "# Prepare polygons\n",
+    "cities = []\n",
+    "for feature in cities_data['features']:  # assuming GeoJSON-like structure\n",
+    "    city_id = feature['id']\n",
+    "    polygon = shape(feature['geometry'])  # shapely geometry from geojson\n",
+    "    cities.append((city_id, polygon))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# yearMonths = ['202501','202502','202503','202504','202401','202402','202403','202404','202405','202406','202407','202408','202409','202410','202411','202412','202301','202302','202303','202304','202305','202306','202307','202308','202309','202310','202311','202312','202201','202202','202203','202204','202205','202206','202207','202208','202209','202210','202211','202212','202101','202102','202103','202104','202105','202106','202107','202108','202109','202110','202111','202112','202001','202002','202003','202004','202005','202006','202007','202008','202009','202010','202011','202012','201901','201902','201903','201904','201905','201906','201907','201908','201909','201910','201911','201912','201801','201802','201803','201804','201805','201806','201807','201808','201809','201810','201811','201812','201701','201702','201703','201704','201705','201706','201707','201708','201709','201710','201711','201712','201601','201602','201603','201604','201605','201606','201607','201608','201609','201610','201611','201612','201501','201502','201503','201504','201505','201506','201507','201508','201509','201510','201511','201512','201401','201402','201403','201404','201405','201406','201407','201408','201409','201410','201411','201412','201301','201302','201303','201304','201305','201306','201307','201308','201309','201310','201311','201312','201201','201202','201203','201204','201205','201206','201207','201208','201209','201210','201211','201212']\n",
+    "yearMonths = ['202501', '202502']\n",
+    "\n",
+    "for yearMonth in yearMonths:\n",
+    "    df = pd.read_csv(\n",
+    "        f\"C://Users//jirip//Documents//Developer//python//kriminalita//processed_files//fact_clean_{yearMonth}.csv\", sep=\",\", encoding=\"utf-8\")\n",
+    "\n",
+    "    # Prepare regions GeoDataFrame\n",
+    "    gdf_regions = gpd.GeoDataFrame(\n",
+    "        {'region_id': [r[0] for r in regions]}, geometry=[r[1] for r in regions])\n",
+    "\n",
+    "    # Prepare points GeoDataFrame\n",
+    "    gdf_points = gpd.GeoDataFrame(\n",
+    "        df, geometry=gpd.points_from_xy(df.Longitude, df.Latitude))\n",
+    "\n",
+    "    # Spatial join\n",
+    "    gdf_joined = gpd.sjoin(gdf_points, gdf_regions,how='left', predicate='within')\n",
+    "\n",
+    "    # If needed, bring the result back to pandas\n",
+    "    df_result = pd.DataFrame(gdf_joined.drop(columns=['geometry', 'index_right']))\n",
+    "    # df_result['mp'] = df_result['mp'].astype(int)\n",
+    "    # df_result['region_id'] = df_result['region_id'].str[:-6]\n",
+    "\n",
+    "    # Prepare cities GeoDataFrame\n",
+    "    gdf_cities = gpd.GeoDataFrame({'city_id': [r[0] for r in cities]}, geometry=[r[1] for r in cities])\n",
+    "\n",
+    "    # Prepare points GeoDataFrame\n",
+    "    gdf_points = gpd.GeoDataFrame(df_result, geometry=gpd.points_from_xy(df_result.Longitude, df_result.Latitude))\n",
+    "\n",
+    "    # Spatial join\n",
+    "    gdf_joined = gpd.sjoin(gdf_points, gdf_cities,how='left', predicate='within')\n",
+    "\n",
+    "    # If needed, bring the result back to pandas\n",
+    "    df_result_final = pd.DataFrame(gdf_joined.drop(columns=['geometry', 'index_right', 'Longitude', 'Latitude']))\n",
+    "    df_result_final['mp'] = df_result_final['mp'].astype(int)\n",
+    "    df_result_final['city_id'] = df_result_final['city_id'].fillna(df_result_final['region_id'])\n",
+    "    df_result_final = df_result_final.drop(columns=['region_id'])\n",
+    "    df_result_final.to_csv(f'F_Crime_{yearMonth}.csv', index=False)"
    ]
   },
   {
@@ -150,6 +210,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# CREATE D_LOCATION CSV\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\n",
+    "import pandas as pd\n",
+    "import json\n",
     "# Load the JSON file into a DataFrame\n",
     "with open('C://Users//jirip//Documents//Developer//python//kriminalita//obce.json', 'r') as file:\n",
     "    obce_data = json.load(file)\n",
@@ -166,18 +231,7 @@
    "execution_count": null,
    "id": "07e1c58f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Download and extraction complete for 202501.\n",
-      "Download and extraction complete for 202502.\n",
-      "Download and extraction complete for 202503.\n",
-      "Download and extraction complete for 202504.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# DONWLOAD ALL DATA FROM URLS\n",
     "import requests\n",
@@ -204,21 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "84a721fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Path to the folder containing the CSV files\n",
-    "folder_path = 'map_files'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "16f73fe9",
    "metadata": {},
    "outputs": [
@@ -226,24 +266,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     id          x          y     mp                            date  state  \\\n",
-      "0   739  17.316089  49.302210  False  2012-01-19T13:14:00.0000+01:00      1   \n",
-      "1   739  17.316089  49.302210  False  2012-01-19T13:14:00.0000+01:00      1   \n",
-      "2   739  17.316089  49.302210  False  2012-01-19T13:14:00.0000+01:00      1   \n",
-      "3   739  17.316089  49.302210  False  2012-01-19T13:14:00.0000+01:00      1   \n",
-      "4  1075  14.585108  50.226063  False  2012-01-26T16:00:00.0000+01:00      1   \n",
-      "\n",
-      "   relevance  types  \n",
-      "0          1     35  \n",
-      "1          1     55  \n",
-      "2          1    101  \n",
-      "3          1    102  \n",
-      "4          4     74  \n"
+      "18433166\n"
      ]
     }
    ],
    "source": [
+    "# COMBINE CSV FILES\n",
+    "# -*- coding: utf-8 -*-\n",
+    "import os\n",
+    "import pandas as pd\n",
     "\n",
+    "# Path to the folder containing the CSV files\n",
+    "folder_path = 'mapped_files'  \n",
     "# List to store DataFrames\n",
     "dataframes = []\n",
     "\n",
@@ -257,48 +291,7 @@
     "# Concatenate all DataFrames into a single DataFrame\n",
     "combined_df = pd.concat(dataframes, ignore_index=True)\n",
     "\n",
-    "print(combined_df.head())  # Display the first few rows of the combined DataFrame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "b27e3728",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jirip\\AppData\\Local\\Temp\\ipykernel_21508\\2065586400.py:2: FutureWarning: In a future version of pandas, parsing datetimes with mixed time zones will raise an error unless `utc=True`. Please specify `utc=True` to opt in to the new behaviour and silence this warning. To create a `Series` with mixed offsets and `object` dtype, please use `apply` and `datetime.datetime.strptime`\n",
-      "  combined_df['date'] = pd.to_datetime(combined_df['date'])\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "Can only use .dt accessor with datetimelike values",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m combined_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(combined_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Extract the year from the 'date' column\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m combined_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124myear\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mcombined_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdate\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdt\u001b[49m\u001b[38;5;241m.\u001b[39myear\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Group by year and save each group as a separate CSV\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m year, group \u001b[38;5;129;01min\u001b[39;00m combined_df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124myear\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
-      "File \u001b[1;32mc:\\Users\\jirip\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\generic.py:6293\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6286\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m   6287\u001b[0m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set\n\u001b[0;32m   6288\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata\n\u001b[0;32m   6289\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessors\n\u001b[0;32m   6290\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_info_axis\u001b[38;5;241m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   6291\u001b[0m ):\n\u001b[0;32m   6292\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[1;32m-> 6293\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\jirip\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\accessor.py:224\u001b[0m, in \u001b[0;36mCachedAccessor.__get__\u001b[1;34m(self, obj, cls)\u001b[0m\n\u001b[0;32m    221\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m obj \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    222\u001b[0m     \u001b[38;5;66;03m# we're accessing the attribute of the class, i.e., Dataset.geo\u001b[39;00m\n\u001b[0;32m    223\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessor\n\u001b[1;32m--> 224\u001b[0m accessor_obj \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_accessor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    225\u001b[0m \u001b[38;5;66;03m# Replace the property with the accessor object. Inspired by:\u001b[39;00m\n\u001b[0;32m    226\u001b[0m \u001b[38;5;66;03m# https://www.pydanny.com/cached-property.html\u001b[39;00m\n\u001b[0;32m    227\u001b[0m \u001b[38;5;66;03m# We need to use object.__setattr__ because we overwrite __setattr__ on\u001b[39;00m\n\u001b[0;32m    228\u001b[0m \u001b[38;5;66;03m# NDFrame\u001b[39;00m\n\u001b[0;32m    229\u001b[0m \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__setattr__\u001b[39m(obj, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_name, accessor_obj)\n",
-      "File \u001b[1;32mc:\\Users\\jirip\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\accessors.py:643\u001b[0m, in \u001b[0;36mCombinedDatetimelikeProperties.__new__\u001b[1;34m(cls, data)\u001b[0m\n\u001b[0;32m    640\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data\u001b[38;5;241m.\u001b[39mdtype, PeriodDtype):\n\u001b[0;32m    641\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m PeriodProperties(data, orig)\n\u001b[1;32m--> 643\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCan only use .dt accessor with datetimelike values\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: Can only use .dt accessor with datetimelike values"
-     ]
-    }
-   ],
-   "source": [
-    "# Ensure the 'date' column is in datetime format\n",
-    "combined_df['date'] = pd.to_datetime(combined_df['date'])\n",
-    "\n",
-    "# Extract the year from the 'date' column\n",
-    "combined_df['year'] = combined_df['date'].dt.year\n",
-    "\n",
-    "# Group by year and save each group as a separate CSV\n",
-    "for year, group in combined_df.groupby('year'):\n",
-    "    group.to_csv(f'annual_data_{year}.csv', index=False)"
+    "print(len(combined_df))  # Display the first few rows of the combined DataFrame"
    ]
   }
  ],
