--- a/kriminalita.ipynb
+++ b/kriminalita.ipynb
@@ -50,6 +50,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "80790436",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: crime_images\\Nasilna.jpg\n",
+      "Downloaded: crime_images\\Pozary_vybuchy.jpg\n",
+      "Downloaded: crime_images\\Kradeze_vloupanim.jpg\n",
+      "Downloaded: crime_images\\Kradeze.jpg\n",
+      "Downloaded: crime_images\\Podvody.jpg\n",
+      "Downloaded: crime_images\\Jina_majetkova.jpg\n",
+      "Downloaded: crime_images\\Obecne_nebezpecna.jpg\n",
+      "Downloaded: crime_images\\Dopravni_nehody.jpg\n",
+      "Downloaded: crime_images\\Toxikomanie.jpg\n",
+      "Downloaded: crime_images\\Zbrane.jpg\n",
+      "Downloaded: crime_images\\Extremismus.jpg\n",
+      "Downloaded: crime_images\\Prestupky.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GET IMAGES FROM MAP\n",
+    "import requests\n",
+    "import os\n",
+    "\n",
+    "# Create a directory to save the images\n",
+    "output_dir = \"crime_images\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "# List of URLs and corresponding names\n",
+    "image_data = [\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/31.jpg\", \"Nasilna\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/32.jpg\", \"Pozary_vybuchy\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/33.jpg\", \"Kradeze_vloupanim\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/34.jpg\", \"Kradeze\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/35.jpg\", \"Podvody\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/36.jpg\", \"Jina_majetkova\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/37.jpg\", \"Obecne_nebezpecna\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/38.jpg\", \"Dopravni_nehody\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/39.jpg\", \"Toxikomanie\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/40.jpg\", \"Zbrane\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/41.jpg\", \"Extremismus\"),\n",
+    "    (\"https://kriminalita.policie.gov.cz/napoveda/img/42.jpg\", \"Prestupky\"),\n",
+    "]\n",
+    "\n",
+    "# Download each image and save it with the corresponding name\n",
+    "for url, name in image_data:\n",
+    "    response = requests.get(url)\n",
+    "    if response.status_code == 200:\n",
+    "        file_path = os.path.join(output_dir, f\"{name}.jpg\")\n",
+    "        with open(file_path, \"wb\") as file:\n",
+    "            file.write(response.content)\n",
+    "        print(f\"Downloaded: {file_path}\")\n",
+    "    else:\n",
+    "        print(f\"Failed to download: {url}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5ba1673b",
    "metadata": {},
    "outputs": [],
