adding regionala maps and images

--- a/kriminalita.ipynb
+++ b/kriminalita.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "80790436",
    "metadata": {},
    "outputs": [
@@ -107,6 +107,85 @@
     "        print(f\"Downloaded: {file_path}\")\n",
     "    else:\n",
     "        print(f\"Failed to download: {url}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e54356f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Dopravni_nehody.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Extremismus.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Jina_majetkova.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Kradeze.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Kradeze_vloupanim.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Nasilna.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Obecne_nebezpecna.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Podvody.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Pozary_vybuchy.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Prestupky.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Toxikomanie.jpg\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Zbrane.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Circular crop images\n",
+    "\n",
+    "from PIL import Image, ImageDraw\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "# Define output directory\n",
+    "output_dir = os.path.join(os.getcwd(), \"crime_images\")\n",
+    "\n",
+    "# Ensure the directory exists before listing files\n",
+    "if not os.path.exists(output_dir):\n",
+    "    raise FileNotFoundError(f\"Directory '{output_dir}' does not exist.\")\n",
+    "\n",
+    "# List images with '_logo.png' suffix\n",
+    "image_names = [file for file in os.listdir(output_dir) if file.endswith(\"jpg\")]\n",
+    "# image_names = ['606217199242506_logo.png', '337503746124061_logo.png', '108798118453748_logo.png', '322424047627615_logo.png']\n",
+    "\n",
+    "\n",
+    "def circular_crop(image_path, output_path):\n",
+    "    # Open the image\n",
+    "    img = Image.open(image_path).convert(\"RGBA\")\n",
+    "    \n",
+    "    # Create same size mask with transparent background\n",
+    "    mask = Image.new(\"L\", img.size, 0)\n",
+    "    draw = ImageDraw.Draw(mask)\n",
+    "\n",
+    "    # Define the circular region (centered)\n",
+    "    size = min(img.size)\n",
+    "    left = (img.width - size) // 2\n",
+    "    top = (img.height - size) // 2\n",
+    "    right = left + size\n",
+    "    bottom = top + size\n",
+    "\n",
+    "    # Draw a white filled circle on the mask\n",
+    "    draw.ellipse((left, top, right, bottom), fill=255)\n",
+    "\n",
+    "    # Apply mask to image\n",
+    "    circular_img = Image.new(\"RGBA\", img.size, (0, 0, 0, 0))\n",
+    "    circular_img.paste(img, (0, 0), mask=mask)\n",
+    "\n",
+    "    # Crop the circular region and save\n",
+    "    circular_img = circular_img.crop((left, top, right, bottom))\n",
+    "    circular_img.save(output_path, format=\"PNG\")\n",
+    "\n",
+    "\n",
+    "# Loop through all images and apply circular cropping\n",
+    "for image_name in image_names:\n",
+    "    input_path = os.path.join(output_dir, image_name)\n",
+    "    output_path = os.path.join(output_dir, image_name)\n",
+    "    circular_crop(input_path, output_path)\n",
+    "    print(f\"Circular cropped image saved at: {output_path}\")\n"
    ]
   },
   {
