--- a/map.ipynb
+++ b/map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5afe985d",
    "metadata": {},
    "outputs": [],
@@ -48,18 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1c7976fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point is inside region: CZ0322000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# POLIGONS for OBCE\n",
     "# -*- coding: utf-8 -*-\n",
@@ -258,18 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "16f73fe9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18433166\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# COMBINE CSV FILES\n",
     "# -*- coding: utf-8 -*-\n",
@@ -292,6 +276,33 @@
     "combined_df = pd.concat(dataframes, ignore_index=True)\n",
     "\n",
     "print(len(combined_df))  # Display the first few rows of the combined DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bdf784d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "# Open and load the JSON file\n",
+    "regions = [\"CZ010\",\"CZ020\",\"CZ031\",\"CZ032\",\"CZ041\",\"CZ042\",\"CZ051\",\"CZ052\",\"CZ053\",\"CZ063\",\"CZ064\",\"CZ071\",\"CZ072\",\"CZ080\"]\n",
+    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//source_files//okresy.json', 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "    for region in regions:\n",
+    "        # Filter the features where id starts with 'CZ020'\n",
+    "        filtered_features = [feature for feature in data['features'] if feature['id'].startswith(region)]\n",
+    "        for feature in filtered_features:\n",
+    "            feature['id'] = feature['id'][:-6]\n",
+    "        # Save the filtered features to a new JSON file\n",
+    "        with open(f'{region}.json', 'w') as output_file:\n",
+    "            json.dump({'type': 'FeatureCollection', 'features': filtered_features}, output_file, indent=4)\n",
+    "\n",
+    "            \n",
+    "            "
    ]
   }
  ],
