--- a/kriminalita.ipynb
+++ b/kriminalita.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "80790436",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e54356f9",
    "metadata": {},
    "outputs": [
@@ -119,18 +119,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Dopravni_nehody.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Extremismus.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Jina_majetkova.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Kradeze.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Kradeze_vloupanim.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Nasilna.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Obecne_nebezpecna.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Podvody.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Pozary_vybuchy.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Prestupky.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Toxikomanie.jpg\n",
-      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Zbrane.jpg\n"
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Dopravni_nehody.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Extremismus.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Jina_majetkova.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Kradeze.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Kradeze_vloupanim.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Nasilna.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Obecne_nebezpecna.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Podvody.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Pozary_vybuchy.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Prestupky.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Toxikomanie.png\n",
+      "Circular cropped image saved at: c:\\Users\\jirip\\Documents\\Developer\\python\\kriminalita\\crime_images\\Zbrane.png\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
     "# Loop through all images and apply circular cropping\n",
     "for image_name in image_names:\n",
     "    input_path = os.path.join(output_dir, image_name)\n",
-    "    output_path = os.path.join(output_dir, image_name)\n",
+    "    output_path = os.path.join(output_dir, image_name.replace(\".jpg\", \".png\"))\n",
     "    circular_crop(input_path, output_path)\n",
     "    print(f\"Circular cropped image saved at: {output_path}\")\n"
    ]
