--- a/map.ipynb
+++ b/map.ipynb
@@ -280,12 +280,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bdf784d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# LOAD JSON FILE AND FILTER BY REGION, LOO\n",
     "import json\n",
     "import pandas as pd\n",
     "# Open and load the JSON file\n",
@@ -299,6 +299,31 @@
     "            feature['id'] = feature['id'][:-6]\n",
     "        # Save the filtered features to a new JSON file\n",
     "        with open(f'{region}.json', 'w') as output_file:\n",
+    "            json.dump({'type': 'FeatureCollection', 'features': filtered_features}, output_file, indent=4)\n",
+    "\n",
+    "            \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "958bac32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "# Open and load the JSON file\n",
+    "# regions = [\"CZ010\",\"CZ020\",\"CZ031\",\"CZ032\",\"CZ041\",\"CZ042\",\"CZ051\",\"CZ052\",\"CZ053\",\"CZ063\",\"CZ064\",\"CZ071\",\"CZ072\",\"CZ080\"]\n",
+    "regions = [\"CZ0425\"]\n",
+    "with open('C://Users//jirip//Documents//Developer//python//kriminalita//source_files//OBCE.json', 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "    for region in regions:\n",
+    "        # Filter the features where id starts with 'CZ020'\n",
+    "        filtered_features = [feature for feature in data['features'] if feature['id'].startswith(region)]\n",
+    "        # Save the filtered features to a new JSON file\n",
+    "        with open(f'{region}_obce.json', 'w') as output_file:\n",
     "            json.dump({'type': 'FeatureCollection', 'features': filtered_features}, output_file, indent=4)\n",
     "\n",
     "            \n",
